# floo-markt-99

./: AUTO_DEPLOY_FINAL.py.txt  IMMEDIATE_DEPLOYMENT_RESULTS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_REPORT.json  PRODUCTION_STATUS.md  PRODUCTION_STATUS_FINAL.md  QUICK_DEPLOY_INSTRUCTIONS.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_MANUAL_DEPLOYMENT.md  admin_cookies.txt  admin_test_cookies.txt  app.py  auth_cookies.txt  cookies.txt  deepseek_text_20250801_27895e.txt  extensions.py  image_upload.py  models.py  push.txt  pyproject.toml  render.yaml  render_deploy_script.py  render_optimized.yaml  render_production_final.yaml  replit.md  requirements.txt  requirements_production.txt  routes.py  templates.txt  test_buyer_cookies.txt  test_email_sending.py  test_messages_final.txt  test_read_status.txt  test_real_email.py  test_user_auth.txt  test_user_colors.txt  test_user_cookies.txt  test_user_fresh.txt
attached_assets/: Pasted--1-routes-py-app-py-python-app--1753931824778_1753931824784.txt  Pasted--Exception--1753918449535_1753918449537.txt  Pasted--ImgBB-API-Key--1753913882817_1753913882819.txt  Pasted-1-HTML-html-li-a-href--1753935021113_1753935021114.txt
static/css/: main.css
templates/: base.html  chat.html  messages.html  product_details.html  seller_inbox.html  upload_form.html  upload_result.html
